css/styles.css
/* ... */
.customers-link:hover .customers-icon{
    color: #404BBF;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
}
.customers-link:focus .customers-icon {
    color: #404BBF;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
}
.customers-list {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 24px;
}

@media screen and (max-width: 1157px) {
    .customers-list {
        flex-wrap: wrap;
    }
    
}
.customers-section {
    padding: 96px 0
}

@media screen and (min-width: 1158px){
    .customers-section {
        padding: 120px 0
    }
}

.logo-third{
    color: #f4f4fd;
}
.btn-portfolio{
    color: #4D5AE5;
    font-family: inherit;
    cursor: pointer;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.04em;
    background: #F4F4FD;
    padding: 12px 24px;
    border: 1px solid #e7e9fc;
    border-radius: 4px;
    transition: 
        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.btn-portfolio:focus,
.btn-portfolio:hover{
    color: #FFFFFF;
    background: #404BBF;
    border: 1px solid transparent;
    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
}
.team-section{
    background-color: #F4F4FD;
    background: var(--cloud);
    padding: 96px 0;
}
@media screen and (min-width: 1158px) {
    .team-section {
        padding: 120px 0;
    }    
}
.team-item{
    background-color: #FFFFFF;
    border-radius: 0px 0px 4px 4px;
    background: var(--white, #FFF);
    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
}
.team-icon{
    fill: var(--cloud);
}
.card{
    padding: 32px 0;
    margin: 0 auto;
}
/* base stile for small devises*/
.container {
    min-width: 320px;
    max-width: 428px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 16px;
    padding-right: 16px;
    /* outline: 1px solid red; */
}
/*tablet*/
@media screen and (min-width:768px) {
 .container{
        max-width: 768px;
}   
}
/*desktop */
@media screen and (min-width:1158px) {
 .container
 {
    max-width: 1158px;
 }   
}


.header{
    padding-top: 0px;
    padding-bottom: 0px;
    border-bottom: 1px solid #e7e9fc;
    /* Does it make a difference? */
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
        0px 1px 1px rgba(46, 47, 66, 0.16),
        0px 1px 6px rgba(46, 47, 66, 0.08);;
}
@media screen and (min-width:768px) and (max-width: 1157px){
    .header {
        padding-bottom: 0;
    }
}


.header-container{
    display:flex;
    flex-direction: row;
    align-items:center;
    justify-content:space-between;
    height: 70px;
}

.header-nav{
    display:flex;
    align-items: center;
}
.header-list{
    display:flex;
    align-items: center;
    gap: 40px;
    position: relative;

}
@media screen and (max-width: 767px) {
  .header-list {
    display: none;
  }  
}
.strategy-container{
    
    /*display: flex;
    align-items: center;
    gap: 24px;*/
}
@media screen and (min-width: 768px){
.strategy-container {
    display: flex;
    align-items: center;
    gap: 24px;
    flex-wrap: wrap;
}
}
@media screen and (min-width: 1158px) {
    .strategy-container {
        flex-wrap: nowrap;
    }
}
.doing-container {
    display: flex;
    gap: 24px;
    align-items: center;
}
@media screen and (max-width: 1157px){
    .doing-section {
        display: none;
    }
}

.doing-elemment{
    width: 360px;
}
.strategy-element {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 0;
}
@media screen and (min-width:768px){
    .strategy-element {
        flex-basis: calc((100% - 24px) / 2);
    }
}
@media screen and (max-width: 767px) {
    .strategy-element:not(:last-child){
        margin: 0 auto 72px auto;
}    
}
@media screen and (min-width:1158px) {
    .strategy-element {
        width: 264px;
    }
}



.strategy-section {
    padding: 96px 0;
    
}
@media screen and (min-width:1158px){
    .strategy-section {
            padding: 120px 0;
    }
}
.strategy-icon {
    fill: #f4f4fd;
}
.strategy-link {
    display: none;
}

@media screen and (min-width:1158px) {
  .strategy-link{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 264px;
    height: 112px;
    background: var(--cloud);
    border-radius: var(--small-radius);
    margin-bottom: 8px;
  }  
}

.doing-section {
    padding: 0 0 120px 0;
}

.team-list {
    display: flex;
    flex-direction: column;
    gap: 72px;
    align-items: center;
    margin-top: 72px; 
}

@media screen and (min-width: 768px) {
    .team-list{
        row-gap: 64px;
        column-gap: 24px;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;

    }
}

@media screen and (min-width: 1158px){
    .team-list{
        flex-wrap: nowrap;
    }
}
.team-header{
    text-align: center;
    margin-bottom: 8px;
    font-size: 20px;
}
.team-link {
    width: 40px;
    height: 40px;
    background-color: var(--iris);
    fill: #fdf4f9;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.team-link:hover,
.team-link:focus {
    background-color: var(--ocean); 
}

.team-links {
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 24px;

}
.footer {
    width: 100%;
    background: #2E2F42;
    padding: 96px 0;
}

@media screen and (min-width: 768px) {
    .footer {
        padding: 100px 0px;
    }
}
.footer-container {
    display: flex;
    flex-direction: column;    
    margin: 0 auto;
    gap: 72px;
}
/* ... */

